--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="fade-in-title" id="title">
-        <h1>Nuestro Baúl de los Recuerdos</h1>
+        <h1>Una vida junto a ti</h1>
     </div>
     <div class="menu" id="menu">
         <button class="btnRecuerdos" onclick="window.location.href='baul.html'">Recuerdos</button>
