--- a/baul.html
+++ b/baul.html
@@ -37,7 +37,7 @@
         <div id="caption"></div>
     </div>
 
-    <button id="recBack" onclick="window.location.href='index.html'">
+    <button id="recBack" onclick="window.location.href='mia.html'">
         <img src="340.png"/>
     </button>
 
