--- a/razones.html
+++ b/razones.html
@@ -21,7 +21,7 @@
 <body onclick="showText(event)">
     <script src="script.js"></script>
     <!-- Contenido de la página en blanco. Aquí podemos agregar después las "razones por las que te amo" -->
-    <button id="recBack" onclick="window.location.href='index.html'">
+    <button id="recBack" onclick="window.location.href='mia.html'">
         <img src="340.png"/>
     </button>
 </body>
