--- a/baul.html
+++ b/baul.html
@@ -38,7 +38,7 @@
     </div>
 
     <button id="recBack" onclick="window.location.href='mia.html'">
-        <img src="340.png"/>
+        <img src="back.png"/>
     </button>
 
     <script src="script.js"></script>
