--- a/mia.html
+++ b/mia.html
@@ -11,6 +11,7 @@
         <h1>Una vida junto a ti</h1>
     </div>
     <div class="menu" id="menu">
+        <button class="btnRecuerdos" onclick="window.location.href='diario.html'">Para ti, de mi</button>
         <button class="btnRecuerdos" onclick="window.location.href='baul.html'">Recuerdos</button>
         <button onclick="window.location.href='razones.html'">Razones por las que te amo</button>
         <!-- Aquí podrás añadir otros botones para opciones futuras -->
