--- a/razones.html
+++ b/razones.html
@@ -22,7 +22,7 @@
     <script src="script.js"></script>
     <!-- Contenido de la página en blanco. Aquí podemos agregar después las "razones por las que te amo" -->
     <button id="recBack" onclick="window.location.href='mia.html'">
-        <img src="340.png"/>
+        <img src="back.png"/>
     </button>
 </body>
 </html>
