--- a/mia.html
+++ b/mia.html
@@ -14,7 +14,10 @@
         <button class="btnRecuerdos" onclick="window.location.href='diario.html'">Para ti, de mi</button>
         <button class="btnRecuerdos" onclick="window.location.href='baul.html'">Recuerdos</button>
         <button onclick="window.location.href='razones.html'">Razones por las que te amo</button>
-        <!-- Aquí podrás añadir otros botones para opciones futuras -->
+    </div>
+
+    <div id="elefantito">
+        <img src="back.png" alt="">
     </div>
 
     <script src="script.js"></script>
