--- a/mia.html
+++ b/mia.html
@@ -17,7 +17,7 @@
     </div>
 
     <div id="elefantito">
-        <img src="back.png" alt="">
+        <img src="3MESES.jpg" alt="">
     </div>
 
     <script src="script.js"></script>
